# orthochrome

./: Cargo.toml  README.md  app.py  main.py  ui.py
silvalide/: __main__.py  app.py  image_processor.py  ui.py
src/: main.rs
