[package]
name = "orthochrome"
description = "Simulate orthochromatic film effects on digital images"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Rutherford"]
readme = "README.md"
homepage = "https://github.com/michaelrutherford/orthochrome"
repository = "https://github.com/michaelrutherford/orthochrome"
keywords = ["photography", "cli", "film", "effects"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image="0.25.0"
imageproc="0.25.0"
rand="0.8.5"
